project modals added

--- a/src/constants/projects-props.json
+++ b/src/constants/projects-props.json
@@ -2,15 +2,28 @@
   "projects": [
     {
       "name": "Happy Hour Helper",
-      "img": "src/assets/Happy-Hour-Helper-img.png",
+      "img": "/src/assets/Happy-Hour-Helper-img.png",
       "tag": "E-Commerce",
-      "link": "https://happy-hour-helper.vercel.app"
+      "link": "https://happy-hour-helper.vercel.app",
+      "technologies": [
+        "Javascript",
+        "React",
+        "Redux",
+        "Firebase",
+        "Express",
+        "Stripe",
+        "Material UI",
+        "Nodemailer",
+        "Cloudinary",
+        "Sequelize"
+      ]
     },
     {
       "name": "Let's Decide",
-      "img": "src/assets/Lets-Decide.png",
+      "img": "/src/assets/Lets-Decide.png",
       "tag": "Web Game",
-      "link": "https://lets-decide-rsp.vercel.app"
+      "link": "https://lets-decide-rsp.vercel.app",
+      "technologies": ["Typescript", "React", "Socket.io", "Express"]
     }
   ]
 }
